<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Surround CALC</string>

    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>

    <string name="undo">Undo</string>
    <string name="clear">Clear</string>
    <string name="result">Result</string>
    <string name="more">……</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="close">Close</string>

    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="dot">.</string>
    <string name="ent">ent</string>
    <string name="bs">BS</string>
    <string name="ca">CA</string>
    <string name="neg">+/-</string>

    <string name="sku_basic">sku_basic</string>
    <!--<string name="sku_basic">android.test.purchased</string>-->
    <!--<string name="sku_basic">android.test.refunded</string>-->
    <string name="billing_service_unavailable">Billing service unavailable</string>

    <string name="upgrade_title">Upgrade</string>
    <string name="upgrade_message">In order to use a share function, it is necessary to upgrade to the charged version (300JPY).\nUpgrade stops also displaying an advertisement.</string>
    <string name="upgrade">UPGRADE!</string>

    <string name="err_inventory">課金情報を取得できませんでした。</string>
</resources>
